# repotracer

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  config.json  pyproject.toml  sampleconfig.json
.github/workflows/: build.yml
.repotracer/: config.json
data/: tool_list.ndjson
fixtures/: count-package-json-deps.json  sample-tokei.json
repotracer/: cli.py  git.py  main.py  stats.py
repotracer/commands/: add.py  run.py
repotracer/lib/: cli.py  config.py  git.py  measurement.py  measurement_fns.py  measurements.py  plotter.py  stat.py  statrunner.py  stats.py  storage.py
rust/: .gitignore  Cargo.toml
rust/src/: cached_walker.rs  config.rs  lib.rs  main.rs  plotter.rs  polars_utils.rs  repo.rs  stat.rs  stats.rs  storage.rs  util.rs
rust/src/collectors/: cached_walker.rs  list_in_range.rs  repo_cache_data.rs  tree_walker.rs
rust/src/commands/: add_stat.rs  clone.rs  config.rs  run.rs  run_one_off.rs  run_stat.rs  serve.rs  show_config.rs
rust/src/stats/: common.rs  custom_script.rs  filecount.rs  grep.rs  tokei.rs  tree_data_collection.rs
src/: config.rs  lib.rs  main.rs  plotter.rs  repo.rs  stat.rs  storage.rs  util.rs
src/collectors/: cached_walker.rs  list_in_range.rs  repo_cache_data.rs
src/commands/: add_stat.rs  config.rs  guess_tools.rs  run.rs  run_one_off.rs  run_stat.rs
src/stats/: common.rs  custom_file_measurement.rs  custom_script.rs  filecount.rs  grep.rs  jq_collector.rs  test_utils.rs  tokei.rs
tests/: test_cli_works.py  test_config.py
viewer/: .env.example  package-lock.json  package.json  start-database.sh  tailwind.config.ts
viewer/prisma/: schema.prisma
viewer/src/pages/: _app.tsx  index.tsx
viewer/src/pages/repo/[slug]/: index.tsx
viewer/src/pages/repo/[slug]/stat/[stat-slug]/: index.tsx
viewer/src/server/api/routers/: post.ts
