[package]
name = "repotracer"
version = "0.6.3"
edition = "2021"
description = "Collect stats about a repo over time."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
overflow-checks = true
debug = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rayon = "1.10.0"
thread_local = "1.1.7"
grep = "0.3.1"
regex = "1.10.3"
anyhow = "1.0.79"
clap = "4.4.18"
glob = "0.3.1"
globset = "0.4.14"
indicatif = {version = "0.17.7", features = ["rayon"]}
chrono = {version = "0.4.33", features = ["serde"]}
url = "2.5.0"
gix = {version = "0.72.1", features=["revision", "parallel", "max-performance", "progress-tree", "serde"]}
tokei = "13.0.0-alpha.8"
ahash = {version = "0.8.8", features = ["serde"]}
smallvec = {version = "1.13.1", features=["serde", "union"]}
indexmap = {version = "2.2.3", features=["serde"]}
dashmap = {version = "6.1.0", features=["inline"]}
crossbeam = {version = "0.8.4", features=["crossbeam-channel"]}
dialoguer = "0.11.0"
tiny_http = "0.12.0"
comfy-table = "7.1.1"
csv = "1.3.0"
jaq-json = {version= "1.1.2", features=["serde_json"]}
jaq-core = "2.2.0"
jaq-std = "2.1.1"
tempfile = "3.20.0"
walkdir = "2.5.0"
