[tool.poetry]
name = "repotracer"
version = "0.1.0"
description = "A tool to collect statistics about a git repository over time"
authors = ["Amedee d'Aboville <amedee.daboville@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
tqdm = "^4.64.1"
sh = "^2.0.4"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
