[package]
name = "repotracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.26.0"
grep = "0.3.1"
anyhow = "1.0.79"
polars = "0.37.0"
clap = "4.4.18"
glob = "0.3.1"
globset = "0.4.14"
indicatif = {version = "0.17.7", features = ["rayon"]}
chrono = "0.4.33"
thread_local = "1.1.7"
url = "2.5.0"
gix = {version = "0.58.0", features=["revision", "parallel", "max-performance", "progress-tree", "serde"]}
smallvec = "1.13.1"
tokei = "12.1.2"
serde_with = "3.6.1"
bincode = "1.3.3"
