[package]
name = "repotracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rayon = "1.5.1"
thread_local = "1.1.7"
grep = "0.3.1"
anyhow = "1.0.79"
clap = "4.4.18"
glob = "0.3.1"
globset = "0.4.14"
indicatif = {version = "0.17.7", features = ["rayon"]}
chrono = {version = "0.4.33", features = ["serde"]}
url = "2.5.0"
gix = {version = "0.58.0", features=["revision", "parallel", "max-performance", "progress-tree", "serde"]}
tokei = "12.1.2"
ahash = {version = "0.8.8", features = ["serde"]}
smallvec = {version = "1.13.1", features=["serde", "union"]}
indexmap = {version = "2.2.3", features=["serde"]}
dashmap = {version = "5.5.3", features=["inline"]}
plotters = "0.3.5"
crossbeam = {version = "0.8.4", features=["crossbeam-channel"]}
dialoguer = "0.11.0"
tiny_http = "0.12.0"
comfy-table = "7.1.1"
csv = "1.3.0"
